# Marina

./: .gitignore
20240910/1/: unprog.py
20240916/1/: prog.py
20240923/1/: prog.py
20240923/2/: prog.py
20240923/3/: prog.py
20240930/1/: prog.py
20240930/2/: prog.py
20240930/3/: prog.py
20241007/1/: prog.py
20241007/2/: prog.py
20241007/3/: prog.py
20241014/1/: prog.py
20241014/2/: prog.py
20241014/3/: prog.py
20241021/1/: prog.py
20241021/2/: prog.py
20241021/3/: prog.py
20241028/1/: prog.py
20241028/2/: prog.py
20241028/3/: prog.py
20241111/1/: prog.py
20241111/2/: prog.py
20241111/3/: prog.py
20241118/1/: prog.py
20241118/2/: prog.py
20241118/3/: prog.py
20241125/1/: prog.py
20241125/2/: prog.py
20241125/3/: prog.py
20250217/1/: prog.py
20250224/1/: prog.py
20250224/2/: prog.py
20250303/1/: prog.py
20250310/1/: prog.py
20250317/1/: client.py  server.py
20250512/0/: .doit.db  MANIFEST.in  Pipfile  README.md  dodo.py  pyproject.toml
20250512/0/docs/source/: conf.py
20250512/0/mood.egg-info/: PKG-INFO  SOURCES.txt
20250512/0/mood/locale/: mud.pot
20250512/0/mood/locale/ru_RU.UTF-8/LC_MESSAGES/: mud.mo  mud.po
20250512/0/tests/: test_server.py
20250512/1/: .doit.db  .flake8  .pydocstyle  MANIFEST.in  Pipfile  dodo.py  pyproject.toml
20250512/1/mood.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
20250512/1/mood/locale/: mud.pot
20250512/1/mood/locale/ru_RU.UTF-8/LC_MESSAGES/: mud.mo  mud.po
20250512/1/test_env/: pyvenv.cfg
20250512/1/tests/: test_client.py
(+223 files in other folders)
